--- a/HW21-JPA/build.gradle
+++ b/HW21-JPA/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     implementation("ch.qos.logback:logback-classic")
     implementation("org.hibernate.orm:hibernate-core")
     implementation("org.flywaydb:flyway-core")
+    implementation("org.apache.commons:commons-lang3:3.12.0")
+
 
     implementation("org.postgresql:postgresql")
 
@@ -26,6 +28,7 @@ dependencies {
 
     testImplementation("org.testcontainers:junit-jupiter")
     testImplementation("org.testcontainers:postgresql")
+
 }
 
 test {
