--- a/HW12-CacheEngine/build.gradle
+++ b/HW12-CacheEngine/build.gradle
@@ -8,6 +8,8 @@ repositories {
     mavenCentral()
 }
 
+tasks.register("prepareKotlinBuildScriptModel"){}
+
 dependencies {
     implementation ("org.projectlombok:lombok")
     annotationProcessor ("org.projectlombok:lombok")
