HW23 Все клиенты= work

--- a/HW23-WEB/docker-compose.yml
+++ b/HW23-WEB/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "5430:5432"
     environment:
-      - POSTGRES_DB=demoDB
+      - POSTGRES_DB=demoDB2
       - POSTGRES_USER=usr
       - POSTGRES_PASSWORD=pwd
       - TZ=Europe/Moscow
