--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 # -------Plugins---------
 jgitver=0.10.0-rc03
-dependencyManagement=1.0.12.RELEASE
-springframeworkBoot=3.0.3
+dependencyManagement=1.1.4
+springframeworkBoot=3.2.0
 johnrengelmanShadow=7.1.2
 jib=3.2.1
 # -------Versions--------
