--- a/HW30-https2/src/main/resources/application.yml
+++ b/HW30-https2/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
   ssl:
     enabled: true
     key-store-type: JKS
-    key-store: HW30-https2\localhost2.jks
+    key-store: classpath:localhost2.jks
     key-store-password: 123123
     key-alias: localhost2
 app:
