--- a/HW30-https2/build.gradle
+++ b/HW30-https2/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id("org.springframework.boot") version "3.0.3"
-    id("io.spring.dependency-management") version "1.0.12.RELEASE"
+    id("org.springframework.boot") version "${springframeworkBoot}"
+    id("io.spring.dependency-management") version "${dependencyManagement}"
 }
 
 group = 'com.example'
@@ -22,7 +22,7 @@ repositories {
 }
 
 ext {
-    set('springCloudVersion', "2022.0.4")
+    set('springCloudVersion', "2023.0.0")
 }
 
 dependencies {
