--- a/project-work/spring-boot-docker-compose.yml
+++ b/project-work/spring-boot-docker-compose.yml
@@ -1,13 +1,31 @@
 version: '3.9'
+volumes:
+    rabbitmq:
 services:
-  db:
-    image: postgres:16.1-bullseye
-    volumes:
-      - /var/lib/postgresql/data/
-    ports:
-      - "5430:5432"
-    environment:
-      - POSTGRES_DB=project-work
-      - POSTGRES_USER=project-work
-      - POSTGRES_PASSWORD=project-work
-      - TZ=Europe/Moscow
+    db:
+        image: postgres:16.1-bullseye
+        volumes:
+            - /var/lib/postgresql/data/
+        ports:
+            - "5430:5432"
+        environment:
+            - POSTGRES_DB=project-work
+            - POSTGRES_USER=project-work
+            - POSTGRES_PASSWORD=project-work
+            - TZ=Europe/Moscow
+    rabbitmq:
+        image: rabbitmq:3.11-management
+        environment:
+            - RABBITMQ_DEFAULT_USER=${LOGIN}
+            - RABBITMQ_DEFAULT_PASS=${PASSWORD}
+            - /etc/rabbitmq/rabbitmq.config:/config/rabbitmq.config:ro
+            - /etc/rabbitmq/rabbitmq.conf:/config/rabbitmq.conf:ro
+        ports:
+            - "15672:15672"
+            - 5672:5672
+        volumes:
+            - "rabbitmq:/var/lib/rabbitmq/mnesia/"
+    redis:
+        image: redis:alpine
+        ports:
+            - "6379:6379"
