--- a/project-work/src/main/resources/application.yml
+++ b/project-work/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port : 8081
 spring:
+  application:
+    name: shop-project
   datasource:
     url: jdbc:postgresql://localhost:5430/project-work
     username: project-work
@@ -19,7 +21,13 @@ spring:
   sql:
     init:
       mode: always
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
 
 logging:
   level:
     org.springframework.jdbc.core.JdbcTemplate: TRACE
+springdoc:
+  show-actuator: true
