--- a/project-work/spring-boot-docker-compose.yml
+++ b/project-work/spring-boot-docker-compose.yml
@@ -1,11 +1,12 @@
 version: '3.9'
 volumes:
     rabbitmq:
+    pgdata14:
 services:
     db:
-        image: postgres:16.1-bullseye
+        image: postgres:14.10
         volumes:
-            - /var/lib/postgresql/data/
+            - pgdata14:/var/lib/postgresql/data/
         ports:
             - "5430:5432"
         environment:
